--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^1.0.1
 #  ScanDoc
-  permission_handler: ^10.0.0
+#  permission_handler: ^10.0.0
   document_scanner_flutter: ^0.2.7
 dev_dependencies:
   flutter_test:
