--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_spinkit: ^5.1.0
   qr_code_scanner: ^1.0.1
+#  firebase
+  http_parser: ^4.0.1
+  firebase_core: ^1.21.1
+  cloud_firestore: ^3.4.6
+  firebase_storage: ^10.3.7
 #  ScanDoc
 #  permission_handler: ^10.0.0
   document_scanner_flutter: ^0.2.7
+#  hive
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
